--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
   "description": "Islamic Tools app for Prayer Times, Qibla Finder, and Adhan alerts.",
   "icons": [
     {
-      "src": "https://pingwing.com.pngegg.com/512.png",
+      "src": "https://pingwing.com.png",
       "sizes": "512x512",
       "type": "image/png"
     }
